[package]
name = "putnam-1992"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
plotters = "0.3"
ndarray = "0.15.6"
ndarray-linalg = {version = "0.16.0", features = ["openblas-static"] }